--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1765,6 +1765,7 @@
     <Content Include="Views\Beta\Index.cshtml" />
     <Content Include="Views\Beta\Search.cshtml" />
     <Content Include="Views\Manage\CompanyDetail.cshtml" />
+    <Content Include="Views\Subjekt\Vazby.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
