--- a/.gitattributes
+++ b/.gitattributes
@@ -40,9 +40,11 @@
 #
 # image files are treated as binary by default.
 ###############################################################################
-#*.jpg   binary
-#*.png   binary
-#*.gif   binary
+*.jpg   binary
+*.png   binary
+*.gif   binary
+*.png   binary
+*.ttf   binary
 
 ###############################################################################
 # diff behavior for common document formats
