--- a/HlidacStatu.Q/HlidacStatu.Q.csproj
+++ b/HlidacStatu.Q/HlidacStatu.Q.csproj
@@ -5,12 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Subscriber\RabbitMQListenerServiceAsync.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="6.3.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
